Removed category and tags from posts | Changed uppercased post author to capitalized

--- a/themes/cactus/source/css/_partial/article.styl
+++ b/themes/cactus/source/css/_partial/article.styl
@@ -16,7 +16,7 @@ article
       font-size: .85rem
 
     .author
-      text-transform: uppercase
+      text-transform: capitalize
       letter-spacing: .01em
       font-weight: 700
 
