--- a/themes/cactus/source/css/_extend.styl
+++ b/themes/cactus/source/css/_extend.styl
@@ -29,6 +29,14 @@ $base-style
     font-size: .9rem
 
   h4
+    text-align: center
+    display: inline
+    border-bottom: 1px dashed $color-accent-3
+    color: $color-accent-3
+    text-decoration: none
+    font-weight: normal
+    font-size: .9rem
+
   h5
   h6
     display: inline
